# smooth-client

./: CHANGELOG.md  pyproject.toml
examples/: quickstart.sh
smooth_client/: client.py
smooth_client/cli/: main.py
tests/: test_cli.py  test_client_admin_users.py
