[project]
name = "loobric-smooth"
version = "0.5.1"
description = "Python client library and CLI for Smooth Core (CNC tool-data sync)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "sliptonic" }]
# The core library and CLI are intentionally stdlib-only, so the package stays
# vendorable and runnable in constrained interpreters.
keywords = ["cnc", "cam", "tool-data", "freecad", "linuxcnc", "machining"]
classifiers = [
      "Development Status :: 3 - Alpha",
      "License :: OSI Approved :: MIT License",
      "Programming Language :: Python :: 3",
      "Topic :: Scientific/Engineering",
      "Intended Audience :: Manufacturing"]
dependencies = []

[project.optional-dependencies]
# DIN 4000 import (CSV + XML) is stdlib-only and ships in the base install. This
# extra is for formats that need heavier parsers — GTC/ISO 13399 P21 (steputils),
# large-XML XSD validation (lxml), etc. (see smooth-core#31 and docs/IMPORTERS_PLAN.md).
importers = ["lxml>=5.0"]
completion = ["argcomplete>=3.0"]
dev = ["pytest>=7.4"]

[project.scripts]
smooth = "smooth_client.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["smooth_client*"]

[project.urls]
Homepage = "https://github.com/loobric/loobric-smooth"
Repository = "https://github.com/loobric/loobric-smooth"
Issues = "https://github.com/loobric/loobric-smooth/issues"
